--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "4.3.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "three": "0.112.1"
   },
   "scripts": {
     "start": "react-scripts start",
